학원방문결제접수 > 수정페이지 업로드

--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -3448,7 +3448,7 @@ table.classTable tr td.w-data {
     display: inline-block;
 }
 .willbes-Buy-PackageList {
-    width: 940px;
+    width: auto;
     padding-bottom: 25px;
     border-bottom: 1px solid #e7e7e7;
 }
