--- a/public/css/willbes/basic.css
+++ b/public/css/willbes/basic.css
@@ -514,6 +514,9 @@ select[disabled] {
 .mt10 {
   margin-top: 10px !important;
 }
+.mt15 {
+  margin-top: 15px !important;
+}
 .mt20 {
   margin-top: 20px !important;
 }
@@ -784,6 +787,9 @@ select[disabled] {
 }
 .tx-y-green {
   color: #35820e;
+}
+.tx-bright-blue {
+  color: #1087ef !important;
 }
 .tx-light-blue {
   color: #1a8ccc !important;
