--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -1259,9 +1259,6 @@ table.auTable tr td {
 .List-Table li span.date {
     float: right;
 }
-.Section  .List-Table li a img {
-    background: #009ef5;   
-}
 
 /* Main Container : Tit */
 .Section .will-Tit {
@@ -1276,6 +1273,9 @@ table.auTable tr td {
     float: right;
     font-size: 13px;
     font-weight: 300;
+}
+.Section .will-subTit.sm {
+    font-size: 10px;
 }
 .Section .will-listTit {
     font-size: 14px;
@@ -1751,25 +1751,366 @@ table.auTable tr td {
     line-height: 16px;
 }
 
-/* Main Container : Main */
 
-.Act1 {}
-.Act1 .ProcessBox {}
-.Act1 .ProcessBox li {
+
+/*********************************************     Main Container : Main     *********************************************/
+
+/* Main Container : Main */
+.main .tx-color {
+    color: #009ef5;
+}
+
+/* Main Container : Act1 */
+.Act1 .ProcessBox ul li {
+    float: left;
+    width: 274px;
+    height: 116px;
+    color: #383838;
     border: 1px solid #eaeaea;
+    margin-top: 8px;
+    margin-left: 8px; 
+}
+.Act1 .ProcessBox ul:first-child li {
+    margin-top: 0;
+}
+.Act1 .ProcessBox ul li:first-child {
+    margin-left: 0;
+}
+.Act1 .ProcessBox ul li .wTit {
+    font-size: 16px;
+    line-height: 20px;
+    margin-bottom: 10px;
+}
+.Act1 .ProcessBox ul li .wTit img {
+    float: left;
+    margin-right: 5px;
+}
+.Act1 .ProcessBox ul li .wTxt {
+    font-size: 13px;
+    line-height: 19px;
+}
+
+.Act1 .ProcessBox ul li a {
+    display: block;
+    width: 100%;
+    height: 100%;
+    padding: 25px 0 0 35px;
+}
+
+/* Main Container : Act2 */
+.Act2 .sliderDayList {
+    background: #f6f6f6;
+    height: 150px;
+    padding: 35px 50px;
+}
+.Act2 span {
+    display: inline-block;
+}
+.Act2 tr td {
+    padding: 20px 0;
+    text-align: center;
+}
+.Act2 .dTit {
+    font-size: 14px;
+    color: #464646;
+    line-height: 20px;
+    text-align: left;
+}
+.Act2 .dTit .w-date {
+    font-size: 12px;
+}
+.Act2 .dDay {
+    font-size: 27px;
+    font-weight: 600;
+    padding: 0 25px;
+}
+.Act2 .line {
+    background: #e2e2e2;
+    text-indent: -9999px;
+}
+
+/* Main Container : Act2 : cSlider : sliderDayList  */
+.cSlider.sliderDayList .bx-wrapper .bx-prev {
+    background: url("../../img/willbes/main/main_btn_prev.png") no-repeat 0 0;
+    left: -25px;
+}
+.cSlider.sliderDayList .bx-wrapper .bx-next {
+    background: url("../../img/willbes/main/main_btn_next.png") no-repeat 0 0;
+    right: -25px;
+    left: inherit;
+}
+.cSlider.sliderDayList .bx-wrapper .bx-viewport {
+    z-index: 10;
+}
+.cSlider.sliderDayList .bx-wrapper .bx-controls {
+    position: absolute;
+    top: 50%;
+    margin-top: -21px;
+    width: 100%;
+    height: 42px;
+    z-index: 1;
+}
+.cSlider.sliderDayList .bx-wrapper .bx-controls-direction {
+    width: 100%;
+    height: 42px;
+}
+.cSlider.sliderDayList .bx-wrapper .bx-controls-direction a {
+    width: 22px;
+    height: 42px;
+}
+
+/* Main Container : Act3 */
+.Act3 dl dt.BestLec {
+    float: left;
+    width: 560px;
+}
+.Act3 dl dt.passInterview {
+    float: left;
+    width: 530px;
+    margin-left: 30px;
+}
+.Act3 .List-Table {
+    padding: 0;
+    margin-top: -5px;
+}
+.Act3 .List-Table li {
+    line-height: 30px;
+}
+.Act3 .List-Table a {
+    width: 100%;
+}
+.Act3 .List-Table span {
+    display: inline-block;
+}
+.Act3 .List-Table .w-sbj {
+    width: 60px;
+    text-align: center;
+}
+.Act3 .List-Table .w-prof {
+    width: 100px;
+    text-align: center;
+}
+.Act3 .List-Table .w-tit {
+    width: 225px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+}
+.Act3 .List-Table .w-user {
+    width: 90px;
+    text-align: center;
+}
+.Act3 .List-Table .w-star {
+    width: 85px;
+    text-align: center;
+}
+
+.videoTabs {
+    border: 1px solid #464646;
+}
+.videoTabs:after {
+    content: "";
+    display: block;
+    clear: both;
+}
+.videoBox {
+    float: left;
+}
+.tabWrap.videoWrap {
+    height: 203px;
+    border: none;
+}
+.tabWrap.videoWrap li {
+    float: left;
+    width: 168px;
+    height: 68px;
+    border-top: 1px solid #464646;
+}
+.tabWrap.videoWrap li:first-child {
+    border-top: none;
+    height: 67px;
+}
+.tabWrap.videoWrap li a {
+    display: block;
+    width: 100%;
+    height: 100%;
+    line-height: 17px;
+    background: #949494;
+    font-size: 13px;
+    font-weight: 600;
+    color: #464646;
+    text-align: center;
+    letter-spacing: 0;
+    border: none;
+    padding: 17px 0;
+}
+.tabWrap.videoWrap li:first-child a {
+    border: none;
+} 
+.tabWrap.videoWrap li a.on {
+    position: relative;
+    z-index: 2;
+    background: #e2e2e2;
+    height: 100%;
+    line-height: 17px;
+    font-weight: 600;
+    color: #464646;
+    border: none;
+}
+
+/* Main Container : Act4 */
+.Act4 dl dt.WhyWillbes {
+    float: left;
+    width: 560px;
+}
+.Act4 dl dt.NowWillbes {
+    float: left;
+    width: 530px;
+    margin-left: 30px;
+}
+.Act4 .List-Table {
+    padding: 0;
+    margin-top: -5px;
+}
+.Act4 .List-Table li {
+    line-height: 30px;
+}
+.Act4 .List-Table a {
+    width: 100%;
+}
+.Act4 .List-Table span {
+    display: inline-block;
+}
+.Act4 .List-Table .w-sbj {
+    width: 60px;
+    text-align: center;
+}
+.Act4 .List-Table .w-tit {
+    width: 390px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+}
+.Act4 .List-Table .w-date {
+    width: 80px;
+    text-align: center;
+}
+
+/* Main Container : Act5 */
+.Act5 dl dt.acadList {
+    float: left;
+    width: 800px;
+}
+.Act5 dl dt.acadList table tr {
+    display: inline-block;
+    width: 800px;
+    margin-top: 10px;   
+}
+.Act5 dl dt.acadList table tr:first-child {
+    margin-top: 0;
+}
+.Act5 dl dt.acadList table tr th {
+    background: #1b1b1b;
+    width: 125px;
+    height: 30px;
+    font-size: 15px;
+    color: #fff;
+    line-height: 30px;
+    text-align: center;
+}
+.Act5 dl dt.acadList table tr td a {
+    display: inline-block;
+    font-size: 15px;
+    line-height: 15px;
+    padding: 0 10px;
+    border-left: 1px solid #1b1b1b;
+}
+.Act5 dl dt.acadList table tr td a:first-child {
+    border-left: none;
+    margin-left: 10px;
+}
+.Act5 dl dt.imgBox {
+    float: left;
+    width: 320px;
+}
+.Act5 dl dt.imgBox ul li {
+    margin-top: 2px;
+}
+.Act5 dl dt.imgBox ul li:first-child {
+    margin-top: 0;
+}
+
+/* Main Container : Act6 */
+.Act6 .CScenterBox {
+    background: #f6f6f6;
+    height: 120px;
+    padding: 15px 0;
+}
+.Act6 tr td {
+    text-align: center;
+    padding: 5px 0;
+}
+.Act6 .mTit {
+    font-size: 26px;
+    color: #464646;
+}
+.Act6 .nTit {
+    font-size: 17px;
+    color: #464646;
+}
+.Act6 .nNumber {
+    font-size: 32px;
+    font-weight: 600;
+    line-height: 40px;
+    margin-left: 10px;
+}
+.Act6 .nTxt {
+    font-family: "굴림", "Gulim", "돋움", "Dotum", "Helvetica", "Apple SD Gothic Neo", "sans-serif";
+    font-size: 12px;
+    color: #888;
+    line-height: 18px;
+    text-align: left;
+}
+.Act6 .nInfo {
+    font-size: 14px;
+    color: #464646;
+    line-height: 20px;
+}
+.Act6 .nInfo span {
+    display: inline-block;
+    margin-left: 10px;
+}
+.Act6 .line {
+    background: #e2e2e2;
+    text-indent: -9999px;
+}
+
+/* Main Container : Bnr */
+.Bnr dl dt {
+    float: left;
+    width: 556px;
+    margin-left: 8px;
+}
+.Bnr dl dt:first-child {
+    margin-left: 0;
+}
+.main .bSlider .bx-wrapper .bx-pager.bx-default-pager a:hover, 
+.main .bSlider .bx-wrapper .bx-pager.bx-default-pager a.active,
+.main .bSlider .bx-wrapper .bx-pager.bx-default-pager a:focus {
+    background: #ffda38;
+}
+.main .bSlider .bx-wrapper .bx-pager.bx-default-pager a {
+    background: #acacac;
+}
+.main .bSlider .bx-wrapper .bx-pager {
+    bottom: inherit;
+    top: 8px;
+    padding-top: 0;
 }
 
 
 
-
-
-
-
-
-
-
-
-
+/*********************************************     Main Container : Cop     *********************************************/
 /* Main Container : Cop */
 .cop .tx-color {
     color: #1087ef;
@@ -1786,6 +2127,9 @@ table.auTable tr td {
     padding: 40px 0;
 }
 
+
+
+/*********************************************     Main Container : Gosi     *********************************************/
 /* Main Container : Gosi */
 .gosi .tx-color {
     color: #8c6239;
@@ -4728,6 +5072,19 @@ table.finTable .row-line {
 .will-Tit span {
     vertical-align: baseline;
 }
+.will-Tit .main-Lec-Selected {
+    float: right;
+    width: auto;
+    margin: 0;
+}
+.will-Tit .main-Lec-Selected select {
+    width: 82px;
+    height: 24px;
+    font-size: 12px; 
+    font-weight: 300;
+    margin: 0;  
+}
+
 .willbes-listTable .will-Tit {
     border-bottom: 1px solid #959595;
     padding-bottom: 8px;
