--- a/public/css/lcms/custom.css
+++ b/public/css/lcms/custom.css
@@ -207,7 +207,7 @@ ul.bar_tabs > li.active a:hover {
 }
 .dropdown-menu li a:hover {
     border: none !important;
-} 
+}
 .dropdown-submenu {
     position: relative;
 }
@@ -400,6 +400,31 @@ table.dataTable tbody>tr.selected, table.dataTable tbody>tr>.selected {
 .form-horizontal .input-label:last-child {
     margin-right: 0;
 }
+
+.form-table .table.table-bordered { border-left: 0; border-right: 0; margin-bottom: 10px; }
+.form-table .table th, .form-table .table td {
+    padding: 10px;
+    vertical-align: middle;
+    line-height: 1.5;
+    height: 55px;
+}
+.form-table .table th { background-color: #f9f9f9; }
+.form-table .table tr th:first-child, .form-table .table tr td:first-child { border-left: 0; }
+.form-table .table tr th:last-child, .form-table .table tr td:last-child { border-right: 0; }
+.form-table .table .form-control { height: 30px; padding: 5px 10px; border-radius: 3px; }
+.form-table .table .flat-text  { position: relative; top: 2px; }
+.form-table.form-table-sm .table th, .form-table.form-table-sm .table td { height: 40px; padding: 5px; }
+.form-table.form-table-sm .table .form-control { height: 27px; padding: 3px 6px; }
+
+.underline-link { text-decoration-line: underline; cursor: pointer; }
+
+.page-title .title_left { width: 60%; }
+.page-title .title_right { width: 40%; }
+
+/* 테이블 head가 2줄인 경우 수정 */
+.table.dataTable.table-head-row2 { border-collapse: collapse !important; }
+.table.dataTable.table-head-row2 th, .table.dataTable.table-head-row2 td { vertical-align: middle; line-height: 28px; }
+
 
 /* display */
 .inline-block {
@@ -740,7 +765,7 @@ table.dataTable tbody>tr.selected, table.dataTable tbody>tr>.selected {
 /* text align */
 .tx-right {
     text-align: right !important;
-} 
+}
 .tx-left {
     text-align: left !important;
 }
@@ -757,9 +782,9 @@ table.dataTable tbody>tr.selected, table.dataTable tbody>tr>.selected {
 }
 
 /* form-horizontal RESET */
-.form-horizontal .checkbox, 
+.form-horizontal .checkbox,
 .form-horizontal .checkbox-inline,
-.form-horizontal .radio, 
+.form-horizontal .radio,
 .form-horizontal .radio-inline {
     padding-top: 0;
 }
@@ -883,7 +908,7 @@ table.dataTable tbody>tr.selected, table.dataTable tbody>tr>.selected {
     border: 1px solid #ccc;
 }
 #mem_seat_list.table>tbody>tr>td,
-#mem_seat_list.table>tbody>tr>th, 
+#mem_seat_list.table>tbody>tr>th,
 #mem_seat_list.table>tfoot>tr>td,
 #mem_seat_list.table>tfoot>tr>th,
 #mem_seat_list.table>thead>tr>td,
@@ -946,7 +971,7 @@ table.dataTable tbody>tr.selected, table.dataTable tbody>tr>.selected {
     margin-bottom: 4% !important;
 }
 #n_mem_seat_list.table>tbody>tr>td,
-#n_mem_seat_list.table>tbody>tr>th, 
+#n_mem_seat_list.table>tbody>tr>th,
 #n_mem_seat_list.table>tfoot>tr>td,
 #n_mem_seat_list.table>tfoot>tr>th,
 #n_mem_seat_list.table>thead>tr>td,
@@ -984,7 +1009,7 @@ table.dataTable tbody>tr.selected, table.dataTable tbody>tr>.selected {
     }
     .right_col {
         padding: 0 !important;
-    }  
+    }
 }
 @media screen and (max-width: 767px) {
     .form-inline .form-control {
