--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -3216,7 +3216,7 @@ table.lecWrapTable .lecInfoTable .w-sub .w-subtit {
     left: 0;
     right: 0;
     bottom: 0;
-    z-index: 100;
+    z-index: 105;
     width: 100%;
     height: 100%;
 }
@@ -4383,10 +4383,16 @@ table.classTable tr td.w-data {
 .willbes-Layer-PassBox .passzoneListInfo span {
     vertical-align: baseline;
 }
+.willbes-Layer-PassBox .passzoneListInfo.BG {
+    background: #f9f9f9;
+    padding: 10px;
+}
 .willbes-Layer-PassBox .passzoneDayInfo {
+    background: #f9f9f9;
     font-size: 14px;
     font-weight: 600;
     letter-spacing: 0;
+    padding: 10px;
 }
 .willbes-Layer-PassBox .passzoneDayInfo span {
     vertical-align: baseline;
@@ -4399,6 +4405,11 @@ table.classTable tr td.w-data {
     display: inline-block;
     margin-top: -10px;
 }
+.willbes-Layer-PassBox .passzonebtn {
+    border-top: 1px solid #edeeef;
+    padding: 20px 0 25px;
+}
+
 
 
 /*********************************************     CART PAGE     *********************************************/
@@ -7005,7 +7016,7 @@ table.PassZoneTable .w-data {
     font-size: 14px;
     font-weight: 600;
     padding: 10px;
-    margin-bottom: 20px;
+    margin-bottom: 45px;
     letter-spacing: 0;
 }
 .willbes-Layer-PassBox .passzoneInfo {
