--- a/public/css/lcms/custom.css
+++ b/public/css/lcms/custom.css
@@ -425,6 +425,10 @@ table.dataTable tbody>tr.selected, table.dataTable tbody>tr>.selected {
 .table.dataTable.table-head-row2 { border-collapse: collapse !important; }
 .table.dataTable.table-head-row2 th, .table.dataTable.table-head-row2 td { vertical-align: middle; line-height: 28px; }
 
+.ln_solid {
+    border-top : 0;
+    margin: 20px 0 0 0;
+}
 
 /* display */
 .inline-block {
