모달팝업 높이 수정 업로드

--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -4414,6 +4414,10 @@ table.classTable tr td.w-data {
     border-top: 1px solid #edeeef;
     padding: 20px 0 25px;
 }
+.willbes-Layer-PassBox .passzonebtn.none {
+    border-top: none;
+    padding: 0;
+}
 
 
 
