--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -4132,9 +4132,29 @@ table.classTable tr td.w-data {
 }
 
 /* subContainer : Content : packageTable */
-.willbes-Lec-Package {
-    margin-bottom: 50px;
+.sticky-Package {
+    position: relative;
+    height: 340px;
 }
+.sticky-total {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    background: #fff;
+    height: auto;
+}
+.sticky-total.fixed {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 10;
+    right: 180px;
+    width: 940px;
+    margin: 0 auto;
+}
+
 .packageTable {
     width: 100%;
     height: 150px;
